Still currently debugging language selector

--- a/synapsis/src/main/resources/static/css/styles.css
+++ b/synapsis/src/main/resources/static/css/styles.css
@@ -29,6 +29,11 @@
     --container-width-sm: 90%;
 
     --transition-ease: all 400ms ease;
+
+}
+
+.langFR, button.langFR {
+    display: none;
 }
 
 html {
