--- a/synapsis/src/main/resources/templates/pages/createJob.html
+++ b/synapsis/src/main/resources/templates/pages/createJob.html
@@ -4,7 +4,7 @@
 
   <form th:action="@{/createjob}" method="post">
 
-    <p th:if="${param.error}">Invalid input.</p>
+    <p th:if="${error}" th:text="${error}" class="bg-red-100 border border-red-400 text-red-700 px-4 py-3 rounded relative"></p>
 
     <div class="flex flex-col border p-8  mx-auto mt-10 shadow-xl w-1/2 mb-20 rounded-xl">
 
@@ -15,16 +15,20 @@
       <p class="font-thin text-3xl m-2 text-center text-black-variant">Create a Job</p>
       <input id="position" name="position" placeholder="Job Position"
              class="font-thin font-serif border border-grey mt-4 pl-3 h-14 content-center rounded-md hover:bg-light"
-             required/>
+             required
+             th:value="${request != null and request.position != null} ? ${request.position} : ''"/>
       <input id="company" name="company" placeholder="Company Name"
              class="font-thin font-serif border border-grey mt-4 pl-3 h-14 content-center rounded-md hover:bg-light"
-             required/>
+             required
+             th:value="${request != null and request.company != null} ? ${request.company} : ''"/>
       <input id="address" name="address" placeholder="Address"
              class="font-thin font-serif border border-grey mt-4 pl-3 h-14 content-center rounded-md hover:bg-light"
-             required/>
+             required
+             th:value="${request != null and request.address != null} ? ${request.address} : ''"/>
       <textarea rows="5" id="description" name="description" placeholder="Description"
                 class="font-thin font-serif border border-grey mt-4 p-3 mb-4 content-center rounded-md hover:bg-light"
-                required></textarea>
+                required
+                th:text="${request != null and request.description != null} ? ${request.description} : ''"></textarea>
 
       <label for="type" class="font-thin text-grey font-serif">Job Type</label>
       <select id="type" name="type" class="mt-2 bg-white border text-sm h-14 border-grey
@@ -40,12 +44,13 @@
 
       <input id="numAvailable" name="numAvailable" type="number" min="1" placeholder="Available Positions"
              class="font-thin font-serif border border-grey mt-4 pl-3 h-14 mb-4
-             content-center rounded-md hover:bg-light" required/>
+             content-center rounded-md hover:bg-light" required
+             th:value="${request != null and request.numAvailable != null} ? ${request.numAvailable} : ''"/>
 
       <div class="border border-grey p-3 rounded-md hover:bg-light">
         <p class="text-grey font-serif">Indicate which documents are mandatory for this application</p>
         <fieldset class="font-serif text-grey">
-          <input type="checkbox" name="needResume" id="needResume">
+          <input type="checkbox" name="needResume" id="needResume" checked>
           <label for="needResume">Resume</label><br>
           <input type="checkbox" name= "needCover" id="needCover">
           <label for="needCover">Cover Letter</label><br>
@@ -58,7 +63,7 @@
         <fieldset required>
           <legend class="font-thin font-serif text-grey">Is this job hosted elsewhere?</legend>
           <div>
-            <input th:value="${true}" type="radio" name="isExternal" id="external" onclick="EnableLinkBox()"/>
+            <input th:value="${true}" type="radio" name="isExternal" id="external" required onclick="EnableLinkBox()"/>
             <label for="external" class="font-thin font-serif text-grey">Yes (Third Party Platform)</label>
             <br/>
 
