--- a/synapsis/src/main/resources/templates/pages/editJob.html
+++ b/synapsis/src/main/resources/templates/pages/editJob.html
@@ -6,7 +6,7 @@
 
     <input type="hidden" name="jobId" th:value="${jobId}" />
 
-    <p th:if="${param.error}">Invalid input.</p>
+    <p th:if="${error}" th:text="${error}" class="bg-red-100 border border-red-400 text-red-700 px-4 py-3 rounded relative"></p>
 
     <div class="flex flex-col border p-8  mx-auto mt-10 shadow-xl w-1/2 mb-20 rounded-xl">
 
