--- a/synapsis/src/main/resources/templates/pages/messagingPage.html
+++ b/synapsis/src/main/resources/templates/pages/messagingPage.html
@@ -43,7 +43,7 @@
 
 
     <div class="container flex flex-wrap pb-28 mb-72">
-        <div class="w-11/12 ml-16 shadow-lg rounded-lg h-[25rem]  overflow-y-scroll">
+        <div class="w-11/12 ml-16 shadow-lg rounded-lg h-[60rem]  overflow-y-scroll">
             <!-- header -->
             <div class="px-5 py-5 flex justify-between items-center bg-white border-b-2">
                 <div class="font-semibold text-2xl">
@@ -78,7 +78,7 @@
                                 <div class="connecting">
                                     Connecting...
                                 </div>
-                                <ul class="text-red-600" id="messageArea">
+                                <ul  id="messageArea">
 
                                 <li th:each="message : ${messages}" >
                                         <div class="flex-none w-2/3 items-start">
@@ -86,7 +86,9 @@
                                                 <img th:if="${message.fileName.toLowerCase().matches('.*\.(png|jpe?g|gif|bmp)')}" th:src="${message.file}" th:alt="${message.fileName}" />
                                                 <a th:unless="${message.fileName.toLowerCase().matches('.*\.(png|jpe?g|gif|bmp)')}" th:download="${message.fileName}" th:text="'Download' + ${message.fileName}"></a>
                                             </th:block>
-                                            <p class="text-white rounded-lg shadow bg-gray-300 p-2 mt-5 text-center" th:text="${message.getContent()}"></p>
+                                            <p class="rounded-lg shadow bg-gray-300 p-2 mt-5 text-center" th:classappend="${message.sender.getId() == senderId} ? text-yellow-400 : text-blue-500"
+                                               th:text="${message.getContent()}"></p>
+
                                         </div>
 
 
@@ -96,21 +98,21 @@
                                         <button data-modal-target="popup-modal" data-modal-toggle="popup-modal" class="absolute top-0 right-0 btn bg-primary btn-primary font-sans  w-28 h-8 p-0 " type="button" >Report</button>
                                         <div id="popup-modal" tabindex="-1" class="fixed top-0 left-0 right-0 z-50 hidden p-4 overflow-x-hidden overflow-y-auto md:inset-0 h-[calc(100%-1rem)] md:h-full">
                                             <div class="relative w-full h-full max-w-md md:h-auto">
-                                                <div class="relative bg-white rounded-lg shadow dark:bg-gray-700">
-                                                    <button type="button" class="absolute top-3 right-2.5 text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm p-1.5 ml-auto inline-flex items-center dark:hover:bg-gray-800 dark:hover:text-white" data-modal-hide="popup-modal">
+                                                <div class="relative bg-white rounded-lg">
+                                                    <button type="button" class="absolute top-3 right-2.5 text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm p-1.5 ml-auto inline-flex items-center" data-modal-hide="popup-modal">
                                                         <svg aria-hidden="true" class="w-5 h-5" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z" clip-rule="evenodd"></path></svg>
                                                         <span class="sr-only">Close modal</span>
                                                     </button>
                                                     <div class="p-6 text-center">
-                                                        <svg aria-hidden="true" class="mx-auto mb-4 text-gray-400 w-14 h-14 dark:text-gray-200" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8v4m0 4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"></path></svg>
-                                                        <p class="mb-5 text-lg font-normal text-gray-500 dark:text-gray-400">Please note that if you choose to report a message for harassment, up to 5 previous messages from the same conversation will
+                                                        <svg aria-hidden="true" class="mx-auto mb-4 text-gray-400 w-14 h-14 " fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8v4m0 4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"></path></svg>
+                                                        <p class="mb-5 text-lg font-normal text-gray-500 ">Please note that if you choose to report a message for harassment, up to 5 previous messages from the same conversation will
                                                             be reviewed by our administrative team in order to assess the situation fully. This is to ensure that appropriate action is taken and that any patterns of behavior are identified.
                                                             We take harassment very seriously and aim to create a safe and respectful environment for all of our users.
                                                             By reporting a message, you are helping us to achieve this goal.</p>
-                                                        <button data-modal-hide="popup-modal" type="submit" class="text-white bg-red-600 hover:bg-red-800 focus:ring-4 focus:outline-none focus:ring-red-300 dark:focus:ring-red-800 font-medium rounded-lg text-sm inline-flex items-center px-5 py-2.5 text-center mr-2">
+                                                        <button data-modal-hide="popup-modal" type="submit" class="text-white bg-red-600 hover:bg-red-800 focus:ring-4 focus:outline-none focus:ring-red-300  font-medium rounded-lg text-sm inline-flex items-center px-5 py-2.5 text-center mr-2">
                                                             I accept
                                                         </button>
-                                                        <button data-modal-hide="popup-modal" type="button" class="text-gray-500 bg-white hover:bg-gray-100 focus:ring-4 focus:outline-none focus:ring-gray-200 rounded-lg border border-gray-200 text-sm font-medium px-5 py-2.5 hover:text-gray-900 focus:z-10 dark:bg-gray-700 dark:text-gray-300 dark:border-gray-500 dark:hover:text-white dark:hover:bg-gray-600 dark:focus:ring-gray-600">I decline</button>
+                                                        <button data-modal-hide="popup-modal" type="button" class="text-gray-500 bg-white hover:bg-gray-100 focus:ring-4 focus:outline-none focus:ring-gray-200 rounded-lg border border-gray-200 text-sm font-medium px-5 py-2.5 hover:text-gray-900 focus:z-10">I decline</button>
                                                     </div>
                                                 </div>
                                             </div>
