Fixed bug where language changes on refresh

--- a/synapsis/src/main/resources/templates/fragments/footer.html
+++ b/synapsis/src/main/resources/templates/fragments/footer.html
@@ -92,11 +92,9 @@
             <div class="flex-none font-light text-white text-xs mr-4">
                 <a href="#">Community Guidelines</a>
             </div>
-            <div class="flex-none font-light text-white text-xs mr-4">
-                <select id="langSelector" name="language">
-                    <option value="EN">English</option>
-                    <option value="FR">French</option>
-                </select>
+            <div class="langSelector flex-none font-light text-white text-xs mr-4">
+                <a class="langEN">Francais</a>
+                <a class="langFR">English</a>
             </div>
         </div>
     </div>
