#228 added admin creation to navbar

--- a/synapsis/src/main/resources/templates/fragments/footer.html
+++ b/synapsis/src/main/resources/templates/fragments/footer.html
@@ -25,10 +25,8 @@
                 <div class="flex-none font-bold text-white text-xl">
                     Services
                 </div>
-                <div class="flex-none font-light text-white text-lg">
-                    <a th:href="@{/admincreationpage}"> Create Admin </a>
-                </div>
-                <div class="flex-none font-light text-white text-lg">
+
+                <div class="flex-none font-light text-white text-lg mt-4">
                     <a> Sign Up </a>
                 </div>
                 <div class="flex-none font-light text-white text-lg">
