--- a/synapsis/src/main/resources/templates/pages/jobs.html
+++ b/synapsis/src/main/resources/templates/pages/jobs.html
@@ -47,6 +47,22 @@
             </div>
           </div>
 
+          <div th:if="${!savedJobs.contains(job.getID())}" class="ml-4 mr-4 mt-6 flex justify-center">
+            <form th:action="@{/savejob}" method="post">
+              <input type="hidden" name="jobId" th:value="${job.getID()}" />
+              <button class="mb-4 text-white font-thin bg-primary mx-auto p-4 rounded-2xl
+              hover:bg-opacity-60 transition hover:-translate-y-0.5 duration-150" type="submit">Save</button>
+            </form>
+          </div>
+
+          <div th:if="${savedJobs.contains(job.getID())}" class="ml-4 mr-4 mt-6 flex justify-center">
+            <form th:action="@{/deletesavedjob}" method="post">
+              <input type="hidden" name="jobId" th:value="${job.getID()}" />
+              <button class="mb-4 text-white font-thin bg-primary mx-auto p-4 rounded-2xl
+              hover:bg-opacity-60 transition hover:-translate-y-0.5 duration-150" type="submit">Unsave</button>
+            </form>
+          </div>
+
         </div>
 
       </div>
