--- a/synapsis/src/main/resources/templates/pages/savedjobs.html
+++ b/synapsis/src/main/resources/templates/pages/savedjobs.html
@@ -32,7 +32,7 @@
           <form th:action="@{/deletesavedjob}" method="post">
             <input type="hidden" name="jobId" th:value="${job.get().getID()}" />
             <button class="mb-4 text-white font-thin bg-primary mx-auto p-4 rounded-2xl
-              hover:bg-opacity-60 transition hover:-translate-y-0.5 duration-150" type="submit">Remove</button>
+              hover:bg-opacity-60 transition hover:-translate-y-0.5 duration-150" type="submit">Unsave</button>
           </form>
 
           <div class="ml-4 mr-4 mt-6 flex justify-center">
