--- a/synapsis/src/main/resources/templates/pages/register.html
+++ b/synapsis/src/main/resources/templates/pages/register.html
@@ -4,7 +4,7 @@
 <div layout:fragment="content">
     <p th:text="${error}"></p>
     <form th:action="@{/register}" th:object="${registrationRequest}" method="post">
-        <div class="flex flex-col border p-8 justify-center mx-auto mt-10 shadow-xl w-1/2 mb-20 rounded-sm">
+        <div class="flex flex-col border p-8 justify-center mx-auto mt-10 shadow-xl w-4/5 lg:w-2/3 mb-20 rounded-sm">
 
             <div class="mb-4">
                 <img src="../../assets/synapsis_logo.svg" class="object-contain h-12 w-12" alt="Synapsis Logo">
