--- a/synapsis/src/main/resources/templates/pages/passwordResetForm.html
+++ b/synapsis/src/main/resources/templates/pages/passwordResetForm.html
@@ -42,7 +42,7 @@
                    class="font-thin font-serif border border-grey pl-3 h-14 content-center rounded-md hover:bg-gray-300"
                    required/>
 
-            <button type="submit" class="btn btn-primary mt-3 bg-primary text-base w-1/3 mx-auto p-4 rounded-2xl font-thin
+            <button type="submit" class="btn btn-primary mt-3 bg-primary text-base mx-auto p-4 rounded-2xl font-thin
                     transition hover:-translate-y-0.5 duration-150 hover:bg-opacity-60">Submit
             </button>
         </div>
