--- a/synapsis/src/main/resources/templates/pages/adminCreationSuccess.html
+++ b/synapsis/src/main/resources/templates/pages/adminCreationSuccess.html
@@ -28,10 +28,11 @@
     <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body>
-<div class="flex items-center justify-center h-screen">
-    <div class="flex flex-col items-center border border-black-variant p-6 bg-grey">
+<div class="container flex items-center justify-center h-screen w-full">
+    <div class="flex flex-col items-center justify-center border border-black-variant p-6 w-4/5 lg:w-2/3 rounded-sm">
         <h1 class="text-3xl font-bold">Success!</h1>
-        <p>The ADMIN was successfully created. Choose what you want to do next:</p>
+        <p>The ADMIN was successfully created.</p>
+        <p>Choose what you want to do next:</p>
         <a th:href="@{/}">Return to homepage</a>
         <a th:href="@{/admincreationpage}">Create another ADMIN</a>
     </div>
