--- a/synapsis/src/main/resources/templates/pages/chatPage.html
+++ b/synapsis/src/main/resources/templates/pages/chatPage.html
@@ -11,7 +11,7 @@
 
 
         <!-- This will be displayed if they already have some chat messages -->
-        <div class="container flex flex-wrap pb-28 mb-28">
+        <div class="flex flex-col flex-wrap pb-28 mb-28 w-4/5 lg:w-9/10 justify-center">
             <div class="w-11/12 ml-16 shadow-lg rounded-lg h-[25rem]">
                 <!-- header -->
                 <div class="px-5 py-5 flex justify-between items-center bg-white border-b-2">
@@ -24,18 +24,18 @@
                 <div class="flex flex-row bg-white">
                     <div class="flex-none w-1/3 border-r-2">
                         <div th:if="${chats.size() != 0}" th:each="chat: ${chats}"
-                             class="w-11/12 h-[8rem]  mt-5 ml-7 bg-neutral-100  border-gray-200 rounded-lg shadow">
-                            <a th:href="@{/chat/{id}(id=${chat.id})}" class="flex pl-8 pt-12">
-                                <img class=" w-[60px] h-[60px] rounded-t-2xl" src="/assets/default_user.svg">
+                             class="w-4/5 h-14 lg:h-20 mt-3 ml-7 bg-neutral-100 border-gray-200 rounded-lg shadow">
+                            <a th:href="@{/chat/{id}(id=${chat.id})}" class="flex ml-7 mt-5 pt-6">
+                                <img class="w-6 mr-2 rounded-t-2xl" src="/assets/default_user.svg">
                                 <div>
                                     <p th:text="${chat.creator.id == globalUserId ? chat.participant.name : chat.creator.name}"
-                                       class=" text-xl font-bold"></p>
+                                       class="text-base lg:text-lg font-bold"></p>
                                 </div>
                             </a>
                         </div>
                     </div>
                     <!-- This image will be displayed before any chat starts with specific user -->
-                    <div class="flex-none w-3/5">
+                    <div class="flex-none justify-center w-3/5">
                         <img class="h-auto max-w-full" src="/assets/messaging.png">
                     </div>
                 </div>
